Added skeleton CAO and PyPlot Notebooks

--- a/cao.ipynb
+++ b/cao.ipynb
@@ -1,31 +1,41 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "496e2d73-e022-418c-b717-bb22ffbfd5cb",
+   "cell_type": "markdown",
+   "id": "e9b5b999-68a0-45b6-a51b-d7012bb34a6b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#comment python code\n",
-    "i = 2\n",
-    "j = 3\n",
-    "k = i * j\n",
-    "print (\"answer\",k)"
+    "# CAO Notebook"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7ad6363d-dcfa-45eb-9522-5935def4c212",
+   "id": "a91f81c0-c211-4424-a14e-3f6a32a2de25",
    "metadata": {},
    "source": [
-    "## title\n"
+    "## Overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c09cf869-225f-4b43-a3de-4fa98c583b05",
+   "metadata": {},
+   "source": [
+    "## References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28935d90-9179-44f6-b668-338ce317351b",
+   "metadata": {},
+   "source": [
+    "## End"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de505939-9c61-4a17-8f37-8084c63b61c1",
+   "id": "ee3d86e6-2d85-4e1c-b90a-d0631fb91ae0",
    "metadata": {},
    "outputs": [],
    "source": []
