--- a/pyplot.ipynb
+++ b/pyplot.ipynb
@@ -1,31 +1,41 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "496e2d73-e022-418c-b717-bb22ffbfd5cb",
+   "cell_type": "markdown",
+   "id": "b303482a-de6b-464c-b2b1-c4498c238d94",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#comment python code\n",
-    "i = 2\n",
-    "j = 3\n",
-    "k = i * j\n",
-    "print (\"answer\",k)"
+    "# Pyplot Notebook"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7ad6363d-dcfa-45eb-9522-5935def4c212",
+   "id": "e5d8bf06-be5a-49ad-9788-384d48b881c7",
    "metadata": {},
    "source": [
-    "## title\n"
+    "## Overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa043df3-052e-4a1f-a7b9-f53d558545ab",
+   "metadata": {},
+   "source": [
+    "## References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fb5efd2-9070-40e4-9b5d-650c89ca0cc0",
+   "metadata": {},
+   "source": [
+    "## End"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de505939-9c61-4a17-8f37-8084c63b61c1",
+   "id": "aaa24b5e-aa13-4459-aa74-bb0c9affa120",
    "metadata": {},
    "outputs": [],
    "source": []
