Added dataframe cleanup to import of excel file and write out to csv file

--- a/FirstJNote.ipynb
+++ b/FirstJNote.ipynb
@@ -8,8 +8,8 @@
     "# First NoteBook\n",
     "***\n",
     "This is an scrap notebook for trying things out in \n",
-    "<br> \n",
-    "remember to cut and paste from this once poc and test finished inot project notebooks "
+    "<br>  \n",
+    "remember to cut and paste from this once poc and test finished into project notebooks "
    ]
   },
   {
@@ -28,11 +28,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "247245f9-4fd5-414b-b497-84d0e041c768",
+   "metadata": {},
+   "source": [
+    "## Trying out LaTex\n",
+    "***\n",
+    "Mathematical formula rendering\n",
+    "<br>  \n",
+    "link to cheat sheet https://math.meta.stackexchange.com/questions/5020/mathjax-basic-tutorial-and-quick-reference\n",
+    "<br> \n",
+    "Enclose the formula in single dollar sign \\\\$.....\\\\$ for inline and double dollar signs \\\\$\\\\$.....\\\\$\\\\$ for below the line\n",
+    "\n",
+    "### Inline\n",
+    "this is an inline example $\\sqrt 2 = 1.414213562373095$\n",
+    "\n",
+    "### Below Line\n",
+    "this is some text and the formula should be below this line $$\\sqrt 2$$\n",
+    "\n",
+    "### Sum\n",
+    "$\\sum_1^n = {(n)(n-1)\\over2}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7ad6363d-dcfa-45eb-9522-5935def4c212",
    "metadata": {},
    "source": [
     "## markdown cell\n",
-    "this is how to use a markdown cell"
+    "***  \n",
+    "this is how to use a markdown cell\n",
+    "\n"
    ]
   },
   {
@@ -41,9 +66,9 @@
    "metadata": {},
    "source": [
     "## trying out referencing\n",
-    "\n",
+    "***\n",
     " \n",
-    "Testing out reference links[^1]\n",
+    "Testing out reference links [^1]  \n",
     "\n",
     "[^1]: This is the reference\n",
     "<br> \n",
