tidied up directory stucture, added read_pdf

--- a/ReadHtml.ipynb
+++ b/ReadHtml.ipynb
@@ -5,7 +5,7 @@
    "id": "356d5158-04bc-4949-80cb-67442f420cec",
    "metadata": {},
    "source": [
-    "# CAO Points Analysis\n",
+    "# Read HTML\n",
     "\n",
     "http://www.cao.ie/index.php?page=points&p=2021\n",
     "\n",
@@ -169,7 +169,7 @@
     }
    ],
    "source": [
-    "# Keep track of how many courses we process.\n",
+    "# Keep track of how many lines we process.\n",
     "no_lines = 0\n",
     "\n",
     "#Open a csv file and write the header to it (column names)\n",
