--- a/ReadPdf.ipynb
+++ b/ReadPdf.ipynb
@@ -1,177 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "97ca0125-e964-4f09-a9d5-affd3ddde254",
-   "metadata": {},
-   "source": [
-    "# First NoteBook\n",
-    "***\n",
-    "This is an scrap notebook for trying things out in \n",
-    "<br>  \n",
-    "remember to cut and paste from this once poc and test finished into project notebooks "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "496e2d73-e022-418c-b717-bb22ffbfd5cb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "answer 6\n"
-     ]
-    }
-   ],
-   "source": [
-    "#comment python code\n",
-    "i = 2\n",
-    "j = 3\n",
-    "k = i * j\n",
-    "print (\"answer\",k)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "247245f9-4fd5-414b-b497-84d0e041c768",
-   "metadata": {},
-   "source": [
-    "## Trying out LaTex\n",
-    "***\n",
-    "Mathematical formula rendering\n",
-    "<br>  \n",
-    "link to cheat sheet https://math.meta.stackexchange.com/questions/5020/mathjax-basic-tutorial-and-quick-reference\n",
-    "<br> \n",
-    "Enclose the formula in single dollar sign \\\\$.....\\\\$ for inline and double dollar signs \\\\$\\\\$.....\\\\$\\\\$ for below the line\n",
-    "\n",
-    "### Inline\n",
-    "this is an inline example $\\sqrt 2 = 1.414213562373095$\n",
-    "\n",
-    "### Below Line\n",
-    "this is some text and the formula should be below this line $$\\sqrt 2$$\n",
-    "\n",
-    "### Sum\n",
-    "$\\sum_1^n = {(n)(n-1)\\over2}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7ad6363d-dcfa-45eb-9522-5935def4c212",
-   "metadata": {},
-   "source": [
-    "## markdown cell\n",
-    "***  \n",
-    "this is how to use a markdown cell\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "342b7c10-d9ab-4a12-90c1-b250852e98a6",
-   "metadata": {},
-   "source": [
-    "## trying out referencing\n",
-    "***\n",
-    " \n",
-    "Testing out reference links [^1]  \n",
-    "\n",
-    "[^1]: This is the reference\n",
-    "<br> \n",
-    "The above works in the readme file but not here in jupyter - find out why"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "184ca37b-6675-47b8-8290-9b31bf056592",
-   "metadata": {},
-   "source": [
-    "### Trying out pypdf2\n",
-    "***\n",
-    "Trying to read pdf file from cao but page extraction is restricted "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "ab151785-c8b5-4945-8739-aa53e9b3ab99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import PyPDF2\n",
-    "pdfFileObj = open(\"lc19pts.pdf\", \"rb\")\n",
-    "pdfReader = PyPDF2.PdfFileReader(pdfFileObj)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "c03c22db-59a8-47d1-b760-2bfa6bc6bb69",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pdfReader.numPages\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "450018e3-53b2-4980-bc70-3d02531f59d3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pageObj = pdfReader.getPage(0)\n",
-    "pdftext = pageObj.extractText()\n",
-    "pdftext"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8046a491-e1e4-4fc6-92b4-2e35d598f49d",
+   "id": "bfd521a1-cc63-4a24-9b62-f68ae101e8f7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#ok not happy with this utility move on "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "190a7e29-cc47-410a-876a-9bbeb0cae3cb",
+   "id": "b9d643d5-6573-4bd1-9b81-24a0ec0d8b0e",
    "metadata": {},
    "source": [
-    "### Trying out tabula read pdf\n",
+    "### Read in a pdf file using tabula read pdf\n",
     "***"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f9c68a65-02e9-4388-b037-b4b4b85e65f1",
+   "id": "e61d4923-b9ae-44f7-bde7-5576f578039c",
    "metadata": {},
    "source": [
     "Link to the documentation\n",
@@ -180,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "34444def-66fb-4b97-a74a-c5491dd9180e",
+   "execution_count": 1,
+   "id": "48ee33ad-7112-4914-8a54-f27687ac20e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,8 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "f6464c40-7aa0-49dd-8bb7-aa3a027e2ca7",
+   "execution_count": 2,
+   "id": "5283cb5d-ae49-4ed3-aa45-b2f3a0a75b5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e130a3f0-926e-4c9e-991d-b30509b66f8e",
+   "execution_count": 3,
+   "id": "240f505f-cc92-4d18-afff-bcd02ca29413",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "5b05ff52-b11a-4aea-9e4a-a37c1db07489",
+   "execution_count": 4,
+   "id": "3540e409-d897-4f13-8afa-ea2c02d2e777",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +74,7 @@
        "18"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,8 +87,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "f02139fd-5d76-4292-8726-fdc548c35a0e",
+   "execution_count": 5,
+   "id": "b7d95ffc-1f29-4d4f-9bef-db4a34c28e0f",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afd982e5-1450-41d2-ad95-93b7b4226418",
+   "id": "fdeb1a80-adc6-400c-abff-b539b1946a44",
    "metadata": {},
    "source": [
     "Read_pdf brings in a list of dataframes - one per page/table of document"
@@ -374,8 +222,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "d9779186-188a-4486-bd34-5aa4c60ad7db",
+   "execution_count": 6,
+   "id": "9a00d07c-ca84-4833-81bb-86a3537244bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,8 +233,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "0d27ea50-a7ae-46ff-bb78-cecdcf999449",
+   "execution_count": 7,
+   "id": "983ca5fc-48d3-4699-ad57-c5a451042501",
    "metadata": {},
    "outputs": [
     {
@@ -447,8 +295,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "8a5fd1c6-b0ac-49e1-8ed0-bd3b9427105d",
+   "execution_count": 8,
+   "id": "2ad2a6d1-a174-4424-b827-07bba6834818",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,8 +305,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "4cf9df5b-9024-42bb-a4c0-a3d97239b261",
+   "execution_count": 9,
+   "id": "79e44c89-9f09-49af-825b-38fb9c1af015",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,8 +318,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "0ee9b278-bcb2-4a85-aa97-d0ccd356c0fe",
+   "execution_count": 10,
+   "id": "371e7b90-4bb6-4c77-b515-445f7b2d3e8a",
    "metadata": {},
    "outputs": [
     {
@@ -532,8 +380,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "31cad5c6-a3f6-47f2-a42c-172d11fcfe5b",
+   "execution_count": 11,
+   "id": "36b400f9-27af-4cae-8bc1-b39fa88a5420",
    "metadata": {},
    "outputs": [
     {
@@ -592,8 +440,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a8d7e2cb-aef1-455e-9d2e-32facf951816",
+   "execution_count": 12,
+   "id": "1234c684-56d8-4154-a5fe-f207aa98ab2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,8 +450,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "3eea0e52-9302-4382-a45f-7e9dd1bc32eb",
+   "execution_count": 13,
+   "id": "81c744be-7cc1-42a1-ae74-e22aecf8c7a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,8 +463,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "687292e5-8597-4819-8e4d-a3f45428d13d",
+   "execution_count": 14,
+   "id": "8fddd1ce-7229-4c79-ba23-5ecdcaa16601",
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +473,7 @@
        "931"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,8 +485,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "2f3eda25-ab43-4699-8502-b7277e6ed422",
+   "execution_count": 15,
+   "id": "4ce62500-3ce2-4bfd-b448-c93c1adc680e",
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +565,7 @@
        "4        AL805        Network Management and Cloud Infrastructure  329  442"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,8 +577,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "d8f384cc-b242-4298-8d77-2a4e732128b0",
+   "execution_count": 16,
+   "id": "982290ea-b2b8-4502-97be-69ef237e58b0",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +657,7 @@
        "930  WD230  Mechanical and Manufacturing Engineering  273  348.0"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,8 +668,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "027626ae-1dac-4dae-b574-5d3d8ff0599f",
+   "execution_count": 17,
+   "id": "b1fbe7d3-b581-496e-b271-486aebcaf4b5",
    "metadata": {
     "tags": []
    },
@@ -966,7 +814,7 @@
        "[931 rows x 4 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,8 +826,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9a80cbd1-6048-4c9c-9237-9df7cedd1c74",
+   "execution_count": 18,
+   "id": "e6547891-c026-424b-a6e9-64669bdb1da5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,8 +836,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "ea93341d-76a3-4493-9982-81c0802a35b1",
+   "execution_count": 19,
+   "id": "1e026194-34ae-48d3-b6bd-ee40029bc1d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +847,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b084e79e-bf60-48b5-89b6-a2581640d458",
+   "id": "0c28ebc0-0360-4f83-ba2a-408c3add1421",
    "metadata": {},
    "source": [
     "***\n",
@@ -1009,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4359a978-6a81-4d52-a510-d74d2f2ada7f",
+   "id": "b6ba5289-dba9-4da3-b9dc-e20e6103ced0",
    "metadata": {},
    "outputs": [],
    "source": []
